Added github OAuth2 strategy

--- a/templates/login.pug
+++ b/templates/login.pug
@@ -17,3 +17,5 @@ block content
     a.btn.btn-lg.btn-primary.btn-block(href="/login/facebook" data-provider="facebook") Login via Facebook
     br
     a.btn.btn-lg.btn-primary.btn-block(href="/login/vkontakte" data-provider="vk") Login via VK
+    br
+    a.btn.btn-lg.btn-primary.btn-block(href="/login/github" data-provider="vk") Login via github
